Removing Driver Factory pattern

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,10 +1,9 @@
-baseUrl=https://www.amazon.com
-user=user
-password=123456
-environment=local
-browser=chrome
-windowMaximize=true
-implicitlyWait=20
-envtype=stage
-reportConfigPath=configs/extent-config.xml
-
+URL=https://www.amazon.com
+TEST_ENVIRONMENT=model
+LOG_LEVEL=INFO
+BROWSER=chrome
+RECORD_VIDEO=false
+CLOSE_BROWSER=true
+MAXIMIZE_BROWSER=true
+USE_GRID=false
+LOCAL=false
