--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
 			<version>${log4j.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.12</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
