--- a/src/test/resources/db.properties
+++ b/src/test/resources/db.properties
@@ -2,7 +2,7 @@ database.driver=com.mysql.cj.jdbc.Driver
 
 #---- Database IDR ----#
 test.environment=QA
-idr.db.username=springuser
-idr.db.password=ThePassword
+idr.db.username=root
+idr.db.password=root
 idr.db.url=jdbc:mysql://localhost:3306/db_example?autoReconnect=true&useSSL=false
 
