--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<javax.mail>1.4</javax.mail>
 		<cucumber.extentsreport.version>3.0.1</cucumber.extentsreport.version>
 		<extentsreport.version>3.1.2</extentsreport.version>
+		<mysql.version>8.0.12</mysql.version>
+		<common.io.version>1.3.2</common.io.version>  
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
@@ -119,8 +121,15 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.12</version>
+			<version>${mysql.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${common.io.version}</version>
+		</dependency>
+
 
 	</dependencies>
 
