--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<cucumber.extentsreport.version>3.0.1</cucumber.extentsreport.version>
 		<extentsreport.version>3.1.2</extentsreport.version>
 		<mysql.version>8.0.12</mysql.version>
-		<common.io.version>1.3.2</common.io.version>  
+		<common.io.version>1.3.2</common.io.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
@@ -84,7 +84,6 @@
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>${rest.assured.version}</version>
-			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -103,7 +102,6 @@
 			<groupId>io.rest-assured</groupId>
 			<artifactId>json-schema-validator</artifactId>
 			<version>${rest.assured.version}</version>
-			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -130,6 +128,12 @@
 			<version>${common.io.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.scribejava</groupId>
+			<artifactId>scribejava-apis</artifactId>
+			<version>2.5.3</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
