--- a/src/test/resources/api.properties
+++ b/src/test/resources/api.properties
@@ -10,6 +10,7 @@ STATUSES_TWEET_POST = /update.json
 STATUSES_LIKE_POST = /favorites/create.json
 STATUSES_TWEET_READ_SINGLE = /show.json
 STATUSES_TWEET_DESTROY = /destroy/{id}.json
+STATUSES_MENTION_TIMELINE= /mentions_timeline.json
 	
 #---- Path ----#
 BASE_URI = https://api.twitter.com
