--- a/src/test/resources/api.properties
+++ b/src/test/resources/api.properties
@@ -15,3 +15,18 @@ STATUSES_MENTION_TIMELINE= /mentions_timeline.json
 #---- Path ----#
 BASE_URI = https://api.twitter.com
 STATUSES = /1.1/statuses
+
+#----------------------- SPOTIFY ----------------------------------------#
+
+#---- Auth ----#
+CLIENT_ID = 7b83b4b8e47947b39b5ef7e3c5fe9578
+CLIENT_SECRET = 27148c96152d4c879eaf7669fed3dbe4
+
+#---- Endpoints ----#
+SPOTIFY_ALBUMS = /albums/4aawyAB9vmqN3uQ7FjRGTy/tracks
+
+	
+#---- Path ----#
+SPOTIFY_BASE_URI = https://api.spotify.com
+SPOTIFY_TOKEN = https://accounts.spotify.com/api/token
+SPOTIFY_BASE_PATH = /v1
