Get an Album API

--- a/src/test/resources/api.properties
+++ b/src/test/resources/api.properties
@@ -23,8 +23,8 @@ CLIENT_ID = 7b83b4b8e47947b39b5ef7e3c5fe9578
 CLIENT_SECRET = 27148c96152d4c879eaf7669fed3dbe4
 
 #---- Endpoints ----#
-SPOTIFY_ALBUMS = /albums/4aawyAB9vmqN3uQ7FjRGTy/tracks
-
+SPOTIFY_ALBUMS_TRACKS = /albums/4aawyAB9vmqN3uQ7FjRGTy/tracks
+SPOTIFY_ALBUMS = /albums/4aawyAB9vmqN3uQ7FjRGTy
 	
 #---- Path ----#
 SPOTIFY_BASE_URI = https://api.spotify.com
