--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,7 @@
 URL=https://www.amazon.com
 TEST_ENVIRONMENT=model
 LOG_LEVEL=INFO
-BROWSER=chrome
+BROWSER=firefox
 RECORD_VIDEO=false
 CLOSE_BROWSER=true
 MAXIMIZE_BROWSER=true
