--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<cucumber.extentsreport.version>3.0.1</cucumber.extentsreport.version>
 		<extentsreport.version>3.1.2</extentsreport.version>
 		<mysql.version>8.0.12</mysql.version>
-		<common.io.version>1.3.2</common.io.version>
+		<common.io.version>2.6</common.io.version>
 		<scribe.java>2.5.3</scribe.java>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -124,7 +124,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>${common.io.version}</version>
 		</dependency>
@@ -135,6 +135,14 @@
 			<version>${scribe.java}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+
 
 	</dependencies>
 
