--- a/src/test/resources/api.properties
+++ b/src/test/resources/api.properties
@@ -25,6 +25,8 @@ CLIENT_SECRET = 27148c96152d4c879eaf7669fed3dbe4
 #---- Endpoints ----#
 SPOTIFY_ALBUMS_TRACKS = /albums/4aawyAB9vmqN3uQ7FjRGTy/tracks
 SPOTIFY_ALBUMS = /albums/4aawyAB9vmqN3uQ7FjRGTy
+SPOTIFY_ARTISTS = /artists/{id}/albums
+SPOTIFY_SEVERAL_ARTISTS= /artists
 	
 #---- Path ----#
 SPOTIFY_BASE_URI = https://api.spotify.com
