--- a/pom.xml
+++ b/pom.xml
@@ -136,5 +136,19 @@
 		</dependency>
 
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				 <version>3.0.0-M3</version>
+				<configuration>
+					<testFailureIgnore>false</testFailureIgnore>
+					<forkMode>once</forkMode>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
