--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - HUB_HOST=hub
     ports:
       - "127.0.0.1:32775:5900"  
+    volumes:
+      - /dev/shm:/dev/shm
   firefox:
     image: selenium/node-firefox-debug
     depends_on:
@@ -20,3 +22,6 @@ services:
       - HUB_HOST=hub
     ports:
       - "127.0.0.1:32776:5900"  
+    volumes:
+      - /dev/shm:/dev/shm
+      - ./output/search-result:/usr/share/udemy/target      
