IP address in db.properties

--- a/src/test/resources/db.properties
+++ b/src/test/resources/db.properties
@@ -4,5 +4,5 @@ database.driver=com.mysql.cj.jdbc.Driver
 test.environment=QA
 idr.db.username=root
 idr.db.password=root
-idr.db.url=jdbc:mysql://localhost:3306/db_example?autoReconnect=true&useSSL=false
+idr.db.url=jdbc:mysql://192.168.1.10:3306/db_example?autoReconnect=true&useSSL=false
 
