ngrok for DB in docker

--- a/src/test/resources/db.properties
+++ b/src/test/resources/db.properties
@@ -2,7 +2,7 @@ database.driver=com.mysql.cj.jdbc.Driver
 
 #---- Database IDR ----#
 test.environment=QA
-idr.db.username=root
+idr.db.username=springuser
 idr.db.password=root
-idr.db.url=jdbc:mysql://192.168.1.10:3306/db_example?autoReconnect=true&useSSL=false
+idr.db.url=jdbc:mysql://0.tcp.ngrok.io:10049/db_example?autoReconnect=true&useSSL=false&serverTimezone=UTC
 
